--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "finance-app-api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@eslint/css": "^0.9.0",
-    "@eslint/js": "^9.29.0",
-    "@eslint/json": "^0.12.0",
-    "@eslint/markdown": "^6.6.0",
-    "eslint": "^8.57.1",
-    "globals": "^16.2.0"
-  }
+    "name": "finance-app-api",
+    "version": "1.0.0",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "postinstall": "npx husky install"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "devDependencies": {
+        "@eslint/css": "^0.9.0",
+        "@eslint/js": "^9.29.0",
+        "@eslint/json": "^0.12.0",
+        "@eslint/markdown": "^6.6.0",
+        "eslint": "^8.57.1",
+        "globals": "^16.2.0",
+        "husky": "^8.0.3",
+        "lint-staged": "^16.1.2"
+    }
 }
