--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "eslint": "^8.57.1",
         "globals": "^16.2.0",
         "husky": "^8.0.3",
-        "lint-staged": "^16.1.2"
+        "lint-staged": "^16.1.2",
+        "prettier": "^3.5.3"
     }
 }
