--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
         "husky": "^8.0.3",
         "lint-staged": "^16.1.2",
         "prettier": "^3.5.3"
+    },
+    "dependencies": {
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0",
+        "pg": "^8.16.2"
     }
 }
