--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "prettier": "^3.5.3"
     },
     "dependencies": {
+        "bcrypt": "^6.0.0",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
-        "pg": "^8.16.2"
+        "pg": "^8.16.2",
+        "uuid": "^11.1.0"
     }
 }
