--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "pg": "^8.16.2",
+        "prisma": "^6.11.1",
         "uuid": "^11.1.0",
         "validator": "^13.15.15",
         "zod": "^3.25.76"
