--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "prettier": "^3.5.3"
     },
     "dependencies": {
+        "@prisma/client": "^6.11.1",
         "bcrypt": "^6.0.0",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
