--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "postinstall": "npx husky install",
-        "migrations": "node src/db/postgres/migrations/exec.js",
+        "postinstall": "npx husky install && npx prisma generate",
         "start:dev": "node --watch index.js"
     },
     "keywords": [],
