--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
+        "test:watch": "jest --watch",
         "postinstall": "npx husky install && npx prisma generate",
         "start:dev": "node --watch index.js"
     },
@@ -28,6 +29,7 @@
         "bcrypt": "^6.0.0",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
+        "jest": "^29.7.0",
         "pg": "^8.16.2",
         "prisma": "^6.11.1",
         "uuid": "^11.1.0",
