--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@eslint/js": "^9.29.0",
         "@eslint/json": "^0.12.0",
         "@eslint/markdown": "^6.6.0",
+        "@types/jest": "^30.0.0",
         "babel-jest": "^30.0.4",
         "eslint": "^8.57.1",
         "globals": "^16.2.0",
