--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "jest": "^29.7.0",
         "pg": "^8.16.2",
         "prisma": "^6.11.1",
+        "swagger-ui-express": "^5.0.1",
         "uuid": "^11.1.0",
         "validator": "^13.15.15",
         "zod": "^3.25.76"
