--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "jest",
+        "test": "jest --passWithNoTests --silent",
         "test:watch": "jest --watch --passWithNoTests --silent",
         "postinstall": "npx husky install && npx prisma generate",
         "start:dev": "node --watch index.js"
