--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "test": "jest --passWithNoTests --silent",
         "test:watch": "jest --watch --passWithNoTests --silent",
+        "test:coverage": "jest --coverage --passWithNoTests --silent",
         "postinstall": "npx husky install && npx prisma generate",
         "start:dev": "node --watch index.js"
     },
