--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "test:watch": "jest --watch --passWithNoTests --silent",
         "test:coverage": "jest --coverage --passWithNoTests --silent",
         "postinstall": "npx husky install && npx prisma generate",
-        "start:dev": "node --watch index.js"
+        "start:dev": "node --watch index.js",
+        "eslint:check": "eslint src/ --ext .js",
+        "prettier:check": "prettier --check src"
     },
     "keywords": [],
     "author": "",
