--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,14 @@ jobs:
               with:
                   node-version: '20'
 
+            - name: Install Dependencies
+              run: npm install
+
             - name: ESlint
-              uses: npm run eslint:check
+              run: npm run eslint:check
 
             - name: Prettier
-              uses: npm run prettier:check
+              run: npm run prettier:check
 
             - name: Test
-              uses: npm run test
+              run: npm run test
