--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test:coverage": "jest --coverage --passWithNoTests --silent",
         "postinstall": "npx husky install && npx prisma generate",
         "start:dev": "node --watch index.js",
-        "eslint:check": "eslint src/ --ext .js",
+        "eslint:check": "eslint src --ext .js",
         "prettier:check": "prettier --check src"
     },
     "keywords": [],
@@ -17,32 +17,30 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
-        "@babel/core": "^7.28.0",
-        "@babel/preset-env": "^7.28.0",
-        "@eslint/css": "^0.9.0",
-        "@eslint/js": "^9.29.0",
-        "@eslint/json": "^0.12.0",
-        "@eslint/markdown": "^6.6.0",
-        "@faker-js/faker": "^9.9.0",
-        "@types/jest": "^30.0.0",
-        "babel-jest": "^30.0.4",
-        "eslint": "^8.57.1",
-        "globals": "^16.2.0",
-        "husky": "^8.0.3",
-        "lint-staged": "^16.1.2",
-        "prettier": "^3.5.3"
+        "@faker-js/faker": "^8.4.1",
+        "@types/jest": "^29.5.12",
+        "eslint": "^9.1.0",
+        "git-commit-msg-linter": "^5.0.7",
+        "husky": "^9.0.11",
+        "jest": "^29.7.0",
+        "lint-staged": "^15.2.2",
+        "prettier": "^3.2.5",
+        "prisma": "^5.12.1",
+        "supertest": "^6.3.4"
     },
     "dependencies": {
-        "@prisma/client": "^6.11.1",
-        "bcrypt": "^6.0.0",
-        "dotenv": "^16.5.0",
-        "express": "^5.1.0",
-        "jest": "^29.7.0",
-        "pg": "^8.16.2",
-        "prisma": "^6.11.1",
-        "swagger-ui-express": "^5.0.1",
-        "uuid": "^11.1.0",
-        "validator": "^13.15.15",
-        "zod": "^3.25.76"
+        "@prisma/client": "^5.12.1",
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "dayjs": "^1.11.10",
+        "dotenv": "^16.4.5",
+        "dotenv-cli": "^7.4.1",
+        "express": "^4.19.2",
+        "globals": "^15.0.0",
+        "jsonwebtoken": "^9.0.2",
+        "swagger-ui-express": "^5.0.0",
+        "uuid": "^9.0.1",
+        "validator": "^13.11.0",
+        "zod": "^3.23"
     }
 }
