--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "jest --passWithNoTests --silent",
-        "test:watch": "jest --watch --passWithNoTests --silent",
-        "test:coverage": "jest --coverage --passWithNoTests --silent",
+        "test": "dotenv -e .env.test -- node --experimental-vm-modules node_modules/jest/bin/jest.js --passWithNoTests  --runInBand --detectOpenHandles --forceExit",
+        "test:watch": "npm run test -- --watch --silent",
+        "test:coverage": "npm run test -- --coverage",
         "postinstall": "npx husky install && npx prisma generate",
         "start:dev": "node --watch index.js",
         "start": "node index.js",
@@ -18,6 +18,7 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "@babel/preset-env": "^7.28.0",
         "@faker-js/faker": "^8.4.1",
         "@types/jest": "^29.5.12",
         "eslint": "^9.1.0",
